--- a/layouts/shortcodes/pdf.html
+++ b/layouts/shortcodes/pdf.html
@@ -1,4 +1,6 @@
 {{ $pdf_url := .Get "src" }}
+{{ $width := .Get "width" | default "100%" }}
+{{ $height := .Get "height" | default "80vh" }}
 <div class="pdf-container">
     <object
         data="{{ $pdf_url }}"
@@ -14,14 +16,13 @@
 .pdf-container {
     width: 100%;
     height: auto;
-    min-height: 80vh;
     overflow: hidden;
 }
 
 .pdf-container object {
-    width: 100%;
-    height: 100%;
-    min-height: 80vh;
+    width: {{ $width }};
+    height: {{ $height }};
+    /* min-height: 85vh; */
     /* border: 1px solid #ccc; */
     border-radius: 4px;
 }
